from python any where

--- a/templates/user/home.html
+++ b/templates/user/home.html
@@ -132,7 +132,7 @@
 
                              {% if   code.code %}
      <p id="display2" class="text-success" >Copied</p>
-	<input type="text" value="gramoney.herokuapp.com/user-registration/{{code.code}}" id="myInput">
+	<input type="text" value="https://www.gramoneyinvestment.com/user-registration/{{code.code}}" id="myInput">
 	<button onclick="myFunction()" id="display" class="btn-dark-blue"><i class="fa fa-copy"></i></button>
 
     {% else %}
@@ -142,7 +142,7 @@
 
                             <hr>
 
-                    <a href=" https://chat.whatsapp.com/LvO5b3he2VABtbpKyjbEoc" class=" btn btn- btn-xs" style="background-color:#075e54;color: #fff; " > <h5> Join Our Whatsapp Community &nbsp;<i class="fa fa-users"></i></h5> </a>
+                    <a href="https://chat.whatsapp.com/BruEqMf37xK4xUbxPuckWE" class=" btn btn- btn-xs" style="background-color:#075e54;color: #fff; " > <h5> Join Our Whatsapp Community &nbsp;<i class="fa fa-users"></i></h5> </a>
 
 
 
@@ -250,7 +250,7 @@
         border-bottom-style: none;
         border-left-style: none;
         border-right-style: none;
-        color: #ef4036;   
+        color: #ef4036;
         transition: all 0.5s;
     }
     .panel-body:hover {
@@ -259,7 +259,7 @@
         border-left-style: none;
         border-right-style: none;
         color: #22293d;
-        cursor: pointer;    
+        cursor: pointer;
     }
 
 </style>
